# semantic-meshes

./: .gitmodules  CMakeLists.txt  COPYING  Dockerfile  README.md  install.sh
.github/workflows/: build-ci.yml
eval-scannet/: create_scannet_eval_graphs.py  eval_scannet.py  run_colmap_on_scannet.py  simplify_scannet_meshes.py
include/semantic_meshes/colmap/: TexturedTriangleRenderer.h  TriangleRenderer.h  Workspace.h
include/semantic_meshes/data/: Colmap.h  Ply.h
include/semantic_meshes/fusion/: Mesh.h
include/semantic_meshes/render/: Camera.h  TexturedTriangleRenderer.h  TriangleRenderer.h
python/: CMakeLists.txt  setup.py
python/scripts/: colorize_cityscapes_mesh.py  colorize_mesh.py  debug_render_texels.py  eval_scannet.py
python/semantic_meshes/: CMakeLists.txt  Colmap.cu  Common.h  Fusion.cu  __init__.py
python/semantic_meshes/data2/: __init__.py  scannet.py
python/semantic_meshes/include/: Camera.h  Colmap.h  Common.h  Fusion.h  Ply.h  Renderer.h
python/semantic_meshes/src/: Data.cu  Fusion.cu  Render.cu  __init__.py
src/: CMakeLists.txt  ColmapWorkspace.cpp
src/data/: Colmap.cpp  Ply.cpp
